--- a/PlantAlarm/Views/CategorySelectorPage.xaml
+++ b/PlantAlarm/Views/CategorySelectorPage.xaml
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="PlantAlarm.Views.CategorySelectorPage"
-             xmlns:controls="clr-namespace:PlantAlarm.CustomControls"
-             Title="Select categories">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Done"  Command="{Binding AddCategoriesCommand}" />
-    </ContentPage.ToolbarItems>
+<rootpages:SafeAreaRespectingPage  xmlns:rootpages="clr-namespace:PlantAlarm.Views.RootPages"
+                                   xmlns="http://xamarin.com/schemas/2014/forms" 
+                                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+                                   x:Class="PlantAlarm.Views.CategorySelectorPage"
+                                   xmlns:customControls="clr-namespace:PlantAlarm.CustomControls">
     <ContentPage.Resources>
         <Style TargetType="StackLayout">
             <Setter Property="VisualStateManager.VisualStateGroups">
@@ -28,33 +25,60 @@
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <Grid>
-            <ScrollView>
-                <StackLayout VerticalOptions="Fill">
-                    <SearchBar Placeholder="Search for categories..." SearchCommand="{Binding SearchCategoriesCommand}" x:Name="SearchBar"
-                           SearchCommandParameter="{Binding Source={x:Reference SearchBar}, Path=Value}" Margin="0,0,0,-6"/>
-                    <CollectionView ItemsSource="{Binding Categories}" ItemSizingStrategy="MeasureFirstItem" x:Name="CategoryColView"
-                                    SelectionMode="Multiple" SelectionChangedCommand="{Binding SelectionChangedCommand}" 
-                                    SelectionChangedCommandParameter="{Binding Source={x:Reference CategoryColView}, Path=SelectedItems}"
-                                    SelectedItems="{Binding SelectedCategoryItems}">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                <StackLayout Orientation="Vertical" HeightRequest="44">
-                                    <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="White" VerticalOptions="Start"/>
-                                    <StackLayout Orientation="Horizontal" Margin="10,0,10,0" VerticalOptions="FillAndExpand">
-                                        <Label Text="{Binding PlantCategory.Name}" VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
-                                        <Image Source="GreenDoneIcon.png" HorizontalOptions="End" IsVisible="{Binding IsSelected}" 
-                                               VerticalOptions="Center" HeightRequest="15"/>
-                                    </StackLayout>
-                                    <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" VerticalOptions="End"/>
-                                </StackLayout>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+        <StackLayout>
+            <!--TOOLBAR-->
+            <customControls:ShadowLayout OffsetY="3" ShadowRadius="2" ShadowOpacity="0.3" Padding="0,0,0,2">
+                <StackLayout Orientation="Horizontal" BackgroundColor="#EAF7F2" HeightRequest="45" Padding="11,2">
+
+                    <Grid HorizontalOptions="FillAndExpand">
+                        <!--LEFT TOOLBAR-->
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                            
+                        </StackLayout>
+
+                        <!--MIDDLE PART-->
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                            <Label Text="Select categories" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
+                        </StackLayout>
+
+                        <!--RIGHT TOOLBAR-->
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                            <Button Text="Done" FontSize="16" Command="{Binding AddCategoriesCommand}" HorizontalOptions="End" 
+                                    FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
+                        </StackLayout>
+                    </Grid>
+                        
                 </StackLayout>
-            </ScrollView>
-            <controls:AddButton HorizontalOptions="End" VerticalOptions="End" Margin="0,0,20,60" 
-                                TouchedCommand="{Binding AddCategoryModalCommand}"/>
-        </Grid>
+            </customControls:ShadowLayout>
+
+            <Grid>
+                <ScrollView>
+                    <StackLayout VerticalOptions="Fill">
+                        <SearchBar Placeholder="Search for categories..." SearchCommand="{Binding SearchCategoriesCommand}" x:Name="SearchBar"
+                               SearchCommandParameter="{Binding Source={x:Reference SearchBar}, Path=Value}" Margin="0,0,0,-6"/>
+                        <CollectionView ItemsSource="{Binding Categories}" ItemSizingStrategy="MeasureFirstItem" x:Name="CategoryColView"
+                                        SelectionMode="Multiple" SelectionChangedCommand="{Binding SelectionChangedCommand}" 
+                                        SelectionChangedCommandParameter="{Binding Source={x:Reference CategoryColView}, Path=SelectedItems}"
+                                        SelectedItems="{Binding SelectedCategoryItems}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout Orientation="Vertical" HeightRequest="44">
+                                        <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="White" VerticalOptions="Start"/>
+                                        <StackLayout Orientation="Horizontal" Margin="10,0,10,0" VerticalOptions="FillAndExpand">
+                                            <Label Text="{Binding PlantCategory.Name}" VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
+                                            <Image Source="GreenDoneIcon.png" HorizontalOptions="End" IsVisible="{Binding IsSelected}" 
+                                                   VerticalOptions="Center" HeightRequest="15"/>
+                                        </StackLayout>
+                                        <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" VerticalOptions="End"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
+                </ScrollView>
+                <customControls:AddButton HorizontalOptions="End" VerticalOptions="End" Margin="0,0,20,60" 
+                                          TouchedCommand="{Binding AddCategoryModalCommand}"/>
+            </Grid>
+        </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</rootpages:SafeAreaRespectingPage>
