--- a/PlantAlarm/Views/PlantDetailsPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPage.xaml
@@ -8,7 +8,10 @@
              Title="{Binding Plant.Name}">
     <ContentPage.Content>
         <ScrollView BackgroundColor="#EAF7F2">
-            <StackLayout Padding="10,0,10,10">
+            <StackLayout Padding="10,0,10,60">
+                <StackLayout.Effects>
+                    <customEffects:SafeAreaEffect />
+                </StackLayout.Effects>
                 <!--TOOLBAR-->
                 <customControls:ShadowLayout OffsetY="3" ShadowRadius="2" ShadowOpacity="0.3" Padding="0,0,0,2" Margin="-10,0">
                     <StackLayout Orientation="Horizontal" BackgroundColor="#EAF7F2" HeightRequest="35" Margin="0,0,0,15" Padding="11,2">
