--- a/PlantAlarm/Views/NewPlantPage.xaml
+++ b/PlantAlarm/Views/NewPlantPage.xaml
@@ -12,108 +12,120 @@
                 <customEffects:SafeAreaEffect />
             </StackLayout.Effects>
 
-            <!--TOOLBAR-->
-            <customControls:ShadowLayout OffsetY="3" ShadowRadius="2" ShadowOpacity="0.3" Padding="0,0,0,2">
-                <StackLayout Orientation="Horizontal" BackgroundColor="#EAF7F2" HeightRequest="35" Padding="11,2">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40" />
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-                    <Grid HorizontalOptions="FillAndExpand">
-                        <!--LEFT TOOLBAR-->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                            <Button Text="← Back" FontSize="16" Command="{Binding BackCommand}" HorizontalOptions="Start" CornerRadius="4"
+                <!--TOOLBAR-->
+                <customControls:ShadowLayout OffsetY="3" ShadowRadius="2" ShadowOpacity="0.3" Padding="0,0,0,2" Grid.Row="0">
+                    <StackLayout Orientation="Horizontal" BackgroundColor="#EAF7F2" Padding="11,2">
+
+                        <Grid HorizontalOptions="FillAndExpand">
+                            <!--LEFT TOOLBAR-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                                <Button Text="← Back" FontSize="16" Command="{Binding BackCommand}" HorizontalOptions="Start" CornerRadius="4"
+                                            FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
+                            </StackLayout>
+
+                            <!--MIDDLE PART-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                                <Label Text="New Plant" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
+                            </StackLayout>
+
+                            <!--RIGHT TOOLBAR-->
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                                <Button Text="Add" FontSize="16" Command="{Binding AddPlantCommand}" HorizontalOptions="End" CornerRadius="4"
                                         FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
-                        </StackLayout>
-
-                        <!--MIDDLE PART-->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                            <Label Text="New Plant" FontSize="18" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black" />
-                        </StackLayout>
-
-                        <!--RIGHT TOOLBAR-->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="End">
-                            <Button Text="Add" FontSize="16" Command="{Binding AddPlantCommand}" HorizontalOptions="End" CornerRadius="4"
-                                    FontAttributes="Bold" TextColor="#16825B" Margin="0,3"/>
-                        </StackLayout>
-                    </Grid>
-                        
-                </StackLayout>
-            </customControls:ShadowLayout>
-
-            <!--PAGE-->
-            <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
-                <customControls:GradientStackLayout GradientFromColor="#7CC45D" GradientToColor="#9CC45D" GradientDirection="ToTopRight" Padding="8" Margin="10,10,10,0">
-                    <Label Text="Basic Info" FontSize="22" FontAttributes="Bold" TextColor="White"/>
-                    <BoxView HeightRequest="1" Color="White" Margin="-3,0,-3,5" />
-                    <Grid HeightRequest="30">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*" />
-                            <ColumnDefinition Width="8*" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White"/>
-                        <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
-                               Text="{Binding PlantName}" FontAttributes="Italic" BackgroundColor="Transparent">
-                            <Entry.Effects>
-                                <customEffects:BorderlessEffect />
-                            </Entry.Effects>
-                        </Entry>
-                    </Grid>
-                    <BoxView HeightRequest="1" Color="#BDD893"/>
-                    <Grid HeightRequest="30">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ShowCategorySelectorPageCommand}" />
-                        </Grid.GestureRecognizers>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="8*" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Categories" VerticalOptions="Center" Grid.Column="0" FontAttributes="Bold" TextColor="White"/>
-                        <Label Text="{Binding SelectedCategoriesMessage}" VerticalOptions="Center"
-                               Grid.Column="1" LineBreakMode="WordWrap" MaxLines="2" FontAttributes="Italic"
-                               HorizontalOptions="End" TextColor="{Binding CategoriesTextColor}"/>
-                    </Grid>
-
-                    <StackLayout.Effects>
-                        <customEffects:RoundedCornerEffect Radius="8" />
-                    </StackLayout.Effects>
-                </customControls:GradientStackLayout>
-            </customControls:ShadowLayout>
-            
-            <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
-                <customControls:GradientStackLayout GradientFromColor="#648A2C" GradientToColor="#7AA835" GradientDirection="ToTopRight" Padding="8" Margin="10">
-                    <StackLayout Orientation="Horizontal">
-                        <Label Text="Picture" FontSize="22" FontAttributes="Bold" TextColor="White"
-                           VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
-                        <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
-                                TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
-                    </StackLayout>
-                    <BoxView HeightRequest="1" Margin="-3,0,-3,0" Color="White" />
-                    <Label Text="You can add more pictures later to track progress." TextColor="#BDD893" FontAttributes="Italic"
-                           Margin="0,5,0,5" FontSize="11" LineBreakMode="WordWrap" />
-                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Transparent">
-                        <Grid BackgroundColor="Transparent">
-                            <StackLayout IsVisible="{Binding HasPhoto}">
-                                <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
-                                                             Aspect="AspectFill">
-                                    <customControls:SquaredImage.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
-                                    </customControls:SquaredImage.GestureRecognizers>
-                                    <customControls:SquaredImage.Effects>
-                                        <customEffects:RoundedCornerEffect Radius="7" />
-                                        <customEffects:BorderEffect Color="White" Thickness="2" />
-                                    </customControls:SquaredImage.Effects>
-                                </customControls:SquaredImage>
-
-                                <StackLayout.Behaviors>
-                                    <customBehaviors:FadingBehavior />
-                                </StackLayout.Behaviors>
                             </StackLayout>
                         </Grid>
+                        
                     </StackLayout>
+                </customControls:ShadowLayout>
+
+                <!--PAGE-->
+                <StackLayout Grid.Row="1">
+
+                    <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
+                        <customControls:GradientStackLayout GradientFromColor="#7CC45D" GradientToColor="#9CC45D" GradientDirection="ToTopRight" Padding="8" Margin="10,10,10,0">
+                            <Label Text="Basic Info" FontSize="22" FontAttributes="Bold" TextColor="White"/>
+                            <BoxView HeightRequest="1" Color="White" Margin="-3,0,-3,5" />
+                            <Grid HeightRequest="30">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*" />
+                                    <ColumnDefinition Width="8*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White"/>
+                                <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
+                                       Text="{Binding PlantName}" FontAttributes="Italic" BackgroundColor="Transparent">
+                                    <Entry.Effects>
+                                        <customEffects:BorderlessEffect />
+                                    </Entry.Effects>
+                                </Entry>
+                            </Grid>
+                            <BoxView HeightRequest="1" Color="#BDD893"/>
+                            <Grid HeightRequest="30">
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding ShowCategorySelectorPageCommand}" />
+                                </Grid.GestureRecognizers>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="8*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="Categories" VerticalOptions="Center" Grid.Column="0" FontAttributes="Bold" TextColor="White"/>
+                                <Label Text="{Binding SelectedCategoriesMessage}" VerticalOptions="Center"
+                                       Grid.Column="1" LineBreakMode="WordWrap" MaxLines="2" FontAttributes="Italic"
+                                       HorizontalOptions="End" TextColor="{Binding CategoriesTextColor}"/>
+                            </Grid>
+
+                            <StackLayout.Effects>
+                                <customEffects:RoundedCornerEffect Radius="8" />
+                            </StackLayout.Effects>
+                        </customControls:GradientStackLayout>
+                    </customControls:ShadowLayout>
+            
+                    <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
+                        <customControls:GradientStackLayout GradientFromColor="#648A2C" GradientToColor="#7AA835" GradientDirection="ToTopRight" Padding="8" Margin="10">
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Picture" FontSize="22" FontAttributes="Bold" TextColor="White"
+                                   VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
+                                <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
+                                        TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
+                            </StackLayout>
+                            <BoxView HeightRequest="1" Margin="-3,0,-3,0" Color="White" />
+                            <Label Text="You can add more pictures later to track progress." TextColor="#BDD893" FontAttributes="Italic"
+                                   Margin="0,5,0,5" FontSize="11" LineBreakMode="WordWrap" />
+                            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Transparent">
+                                <Grid BackgroundColor="Transparent">
+                                    <StackLayout IsVisible="{Binding HasPhoto}" x:Name="ImageContainerStack">
+                                        <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
+                                                                     Aspect="AspectFill" PropertyChanged="CheckIfImageSourceChanged">
+                                            <customControls:SquaredImage.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
+                                            </customControls:SquaredImage.GestureRecognizers>
+                                            <customControls:SquaredImage.Effects>
+                                                <customEffects:RoundedCornerEffect Radius="7" />
+                                                <customEffects:BorderEffect Color="White" Thickness="2" />
+                                            </customControls:SquaredImage.Effects>
+                                        </customControls:SquaredImage>
+
+                                        <StackLayout.Behaviors>
+                                            <customBehaviors:FadingBehavior />
+                                        </StackLayout.Behaviors>
+                                    </StackLayout>
+                                </Grid>
+                            </StackLayout>
                 
-                    <StackLayout.Effects>
-                        <customEffects:RoundedCornerEffect Radius="8" />
-                    </StackLayout.Effects>
-                </customControls:GradientStackLayout>
-            </customControls:ShadowLayout>
+                            <StackLayout.Effects>
+                                <customEffects:RoundedCornerEffect Radius="8" />
+                            </StackLayout.Effects>
+                        </customControls:GradientStackLayout>
+                    </customControls:ShadowLayout>
+
+                </StackLayout>
+
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </rootpages:SafeAreaRespectingPage>
